fixed scrollbar chrome issue

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 .horizontal {
     display: flex;
-    overflow: scroll;
+    overflow: auto;
     justify-content: center;
 }
 
